syntax = "proto3";

package proto_order;

option go_package = "github.com/vsespontanno/eCommerce/proto/orders";

service Order {
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
  rpc GetOrder(GetOrderRequest) returns (GetOrderResponse);
  rpc ListOrders(ListOrdersRequest) returns (ListOrdersResponse);
}

message CreateOrderRequest {
  OrderEvent order = 1;
}

message CreateOrderResponse {
  string order_id = 1;
  string error = 2;
}

message GetOrderRequest {
  string order_id = 1;
}

message GetOrderResponse {
  OrderEvent order = 1;
}

message ListOrdersRequest {
  int64 user_id = 1;
  int32 limit = 2;
  int32 offset = 3;
}

message ListOrdersResponse {
  repeated GetOrderResponse orders = 1;
}

message OrderItem {
  int64 product_id = 1;
  int64 quantity = 2;
}

message OrderEvent {
  string order_id = 1;
  int64 user_id = 2;
  repeated OrderItem items = 3;
  string status = 4;
  int64 total = 5;
}