syntax = "proto3";

package proto_saga;

option go_package = "github.com/vsespontanno/eCommerce/internal/proto/saga";

service Saga {
    rpc StartCheckout(StartCheckoutRequest) returns (StartCheckoutResponse);
}

message StartCheckoutRequest {
    int64 userID = 1;
    repeated Cart cart = 2;
}

message StartCheckoutResponse {
    string orderID = 1;
    string error = 2;
}

message Cart {
    int64 productID = 1;
    int64 price = 2;
    int64 quantity = 3;
}